--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,13 @@
 	    <version>3.4.0</version>
 	</dependency>
 	
+	<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-server -->
+	<dependency>
+	    <groupId>org.seleniumhq.selenium</groupId>
+	    <artifactId>selenium-server</artifactId>
+	    <version>3.4.0</version>
+	</dependency>
+		
 	<!-- https://mvnrepository.com/artifact/info.cukes/cucumber-core -->
 	<dependency>
 	    <groupId>info.cukes</groupId>
@@ -103,9 +110,7 @@
 	    <artifactId>cobertura</artifactId>
 	    <version>2.1.1</version>
 	    <scope>test</scope>
-	</dependency>
-	
-	
+	</dependency>	
 	
   </dependencies>
 </project>
