--- a/pom.xml
+++ b/pom.xml
@@ -112,5 +112,12 @@
 	    <scope>test</scope>
 	</dependency>	
 	
+	<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-chrome-driver -->
+	<dependency>
+	    <groupId>org.seleniumhq.selenium</groupId>
+	    <artifactId>selenium-chrome-driver</artifactId>
+	    <version>3.4.0</version>
+	</dependency>
+	
   </dependencies>
 </project>
