--- a/pom.xml
+++ b/pom.xml
@@ -119,5 +119,12 @@
 	    <version>3.4.0</version>
 	</dependency>
 	
+	<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-remote-control -->
+	<dependency>
+	    <groupId>org.seleniumhq.selenium</groupId>
+	    <artifactId>selenium-remote-control</artifactId>
+	    <version>2.0rc2</version>
+	</dependency>	
+	
   </dependencies>
 </project>
